HelloUltraviolet/Fixtures/RejectedSource/Keys/KeyEscapeDeferredAccess/Source/Main.uv
//! Rejected key-system specimen for deferred key-dependent access.

public procedure keyEscapeDeferredAccessReference() -> i32 {
    var shared_value: shared i32 = 1
    %read shared_value {
        defer {
            let delayed = shared_value
        }
    }
    return 0
}
